fix issue where smaller monitors (but not too small) wouldrightshift rightnav

--- a/frontend/beamed-blog/src/styles/AppHeader.css
+++ b/frontend/beamed-blog/src/styles/AppHeader.css
@@ -6,3 +6,8 @@
     color: #2a9fd6;
 }
 
+@media (min-width: 768px) {
+    .navbar-right { 
+        float: none !important;
+    }
+}
